5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1691_1932.log
== TEST (2019-04-24 12:48:14) 
-- CODE:
x1=float(input("distância entre os olhos, da Imagem 1:")
x2=float(input("distância entre o nariz e o queixo, da Imagem 1:")
y1=float(input("distância entre os olhos, da Imagem 2:")
y2=float(input("distância entre o nariz e o queixo, da Imagem 2:")
z1=float(input("distância entre os olhos, da Imagem 3:")
z2=float(input("distância entre o nariz e o queixo, da Imagem 3")
			

-- ERROR:
File "XXXX", line 2
    x2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:48:48) 
-- CODE:
x1=float(input("distancia entre os olhos, da Imagem 1:")
x2=float(input("distancia entre o nariz e o queixo, da Imagem 1:")
y1=float(input("distancia entre os olhos, da Imagem 2:")
y2=float(input("distancia entre o nariz e o queixo, da Imagem 2:")
z1=float(input("distancia entre os olhos, da Imagem 3:")
z2=float(input("distancia entre o nariz e o queixo, da Imagem 3")
			

-- ERROR:
File "XXXX", line 2
    x2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:49:17) 
-- CODE:
x1=float(input("distancia entre os olhos, da Imagem 1:")
x2=float(input("distancia entre o nariz e o queixo da Imagem 1:")
y1=float(input("distancia entre os olhos, da Imagem 2:")
y2=float(input("distancia entre o nariz e o queixo, da Imagem 2:")
z1=float(input("distancia entre os olhos, da Imagem 3:")
z2=float(input("distancia entre o nariz e o queixo, da Imagem 3")
			

-- ERROR:
File "XXXX", line 2
    x2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:49:49) 
-- CODE:
x1=float(input("distancia entre os olhos, da Imagem 1:")
x2=float(input(" nariz e o queixo da Imagem 1:")
y1=float(input("distancia entre os olhos, da Imagem 2:")
y2=float(input("distancia entre o nariz e o queixo, da Imagem 2:")
z1=float(input("entre os olhos da Imagem 3:")
z2=float(input(" nariz e o queixo Imagem 3")
			

-- ERROR:
File "XXXX", line 2
    x2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:50:04) 
-- CODE:
x1=float(input("distancia entre os olhos, da Imagem 1:")
x2=float(input("imagem 1")
y1=float(input("distancia entre os olhos, da Imagem 2:")
y2=float(input("distancia entre o nariz e o queixo, da Imagem 2:")
z1=float(input("entre os olhos da Imagem 3:")
z2=float(input(" nariz e o queixo Imagem 3")
			

-- ERROR:
File "XXXX", line 2
    x2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:50:29) 
-- CODE:
x1=float(input("distancia entre os olhos, da Imagem 1:")
x4=float(input("ajsajs"))
y1=float(input("distancia entre os olhos, da Imagem 2:")
y2=float(input("distancia entre o nariz e o queixo, da Imagem 2:")
z1=float(input("entre os olhos da Imagem 3:")
z2=float(input(" nariz e o queixo Imagem 3")
			

-- ERROR:
File "XXXX", line 2
    x4=float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:50:53) 
-- CODE:
x1=float(input("olhos imagem 1"))
-- ERROR:
File "XXXX", line 2
    x4=float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:51:56) 
-- CODE:
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
-- ERROR:
File "XXXX", line 2
    x4=float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:53:28) 
-- CODE:
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p1=abs(p1)
p2=y1/y2
p2=abs(p2)
p3=z1/z2
p3=abs(p3)
print(p1)
-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:53:36) 
-- CODE:
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p1=abs(p1)
p2=y1/y2
p2=abs(p2)
p3=z1/z2
p3=abs(p3)
print(p1)
-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:53:49) 
-- CODE:
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p1=abs(p1)
p2=y1/y2
p2=abs(p2)
p3=z1/z2
p3=abs(p3)
print(p1)
-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:54:23) 
-- CODE:
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
abs(p1)
p2=y1/y2
p2=abs(p2)
p3=z1/z2
p3=abs(p3)
print(p1)
-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:54:47) 
-- CODE:
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
abs(p1)
p2=y1/y2
p2=abs(p2)
p3=z1/z2
p3=abs(p3)
print(abs(p1))
-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:47:56) 
-- CODE:
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
w=abs(p1)
p2=y1/y2
p2=abs(p2)
p3=z1/z2
p3=abs(p3)
print(w)
-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:00:44) 
-- CODE:
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
w=abs(p1)
p2=y1/y2
p2=abs(p2)
p3=z1/z2
p3=abs(p3)
print(w)
-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:01:19) 
-- CODE:
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p2=abs(p2)
p3=z1/z2
p3=abs(p3)
print(abs(p1))
-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:04:07) 
-- CODE:
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
h=p1-p3
print(abs(h))
-- OUTPUT:
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:17:42) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
h=p1-p3
print(abs(h))
-- OUTPUT:
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:17:56) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
h=p1-p3
print(abs(h))
-- OUTPUT:
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 21:18:53) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
p1=abs(p1)
-- OUTPUT:
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 00:36:41) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
p1=int(p1)
-- OUTPUT:
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 00:36:49) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
p1=int(p1)
-- OUTPUT:
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 00:37:08) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
p1=int(p1)
print(p1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 00:37:38) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
p1=round(p1,2)
print(p1)
-- OUTPUT:
1.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 00:39:48) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
if(p1-p2)<(p1-p3):
	print("1 e 2")
elif(p1-p3)<(p1-p2):
	print("1 e 3")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 00:40:00) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
if(p1-p2)<(p1-p3):
	print("1 e 2")
elif(p1-p3)<(p1-p2):
	print("1 e 3")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 00:40:41) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
if(p1-p2)>(p1-p3):
	print("1 e 2")
elif(p1-p3)>(p1-p2):
	print("1 e 3")
-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 00:42:10) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
j=p1-p2
h=abs(p1-p2)
print(j,h)
if(p1-p2)<(p1-p3):
	print("1 e 2")
elif(p1-p3)<(p1-p2):
	print("1 e 3")
elif(p2-p3)>(p2-p1):
	
-- ERROR:
File "XXXX", line 20
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 00:42:25) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
j=p1-p2
h=abs(p1-p2)
print(j,h)
if(p1-p2)<(p1-p3):
	print("1 e 2")
elif(p1-p3)<(p1-p2):
	print("1 e 3")

	
-- OUTPUT:
-0.6865079365079365 0.6865079365079365
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 00:43:22) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
j=p1-p2
h=abs(p1-p2)
print(j,h)
if(abs(p1-p2))<(abs(p1-p3)):
	print("1 e 2")
elif(abs(p1-p3))<(abs(p1-p2)):
	print("1 e 3")

	
-- OUTPUT:
-0.6865079365079365 0.6865079365079365
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 00:44:56) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
if(abs(p1-p2))<(abs(p1-p3)):
	print("1 e 2")
elif(abs(p1-p3))<(abs(p1-p2)):
	print("1 e 3")
elif(abs(p3-p2))<(abs(p3-p1)):
	print("2 e 3")

	
-- EXECUTION TIME:
0.130526
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 01:19:04) 
-- CODE:
from math import*
x1=float(input("olhos imagem 1: "))
x2=float(input("nariz queixo imagem1: "))
y1=float(input("olhos imagem2: "))
y2=float(input("nariz queixo imagem2:"))
z1=float(input("olhos imagm 3 :"))
z2=float(input("nariz queixo imgaem 3: "))
p1=x1/x2
p2=y1/y2
p3=z1/z2
if(abs(p1-p2))<(abs(p1-p3)):
	print("1 e 2")
elif(abs(p1-p3))<(abs(p1-p2)):
	print("1 e 3")
elif(abs(p3-p2))<(abs(p3-p1)):
	print("2 e 3")

	
-- EXECUTION TIME:
0.257504
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
